src/test/c/accept/38-lambda-args.arcx
f = (a: int, b: float) {
    return;
}; 