src/test/c/reject/40-nested-conditionals-missing-parenthesis.arcx
if (a == b {
    if (c == d) {
        x:int=1;
    }
} 